--- a/BarcodeSample1/app/build.gradle
+++ b/BarcodeSample1/app/build.gradle
@@ -16,6 +16,8 @@ android {
     }
 }
 dependencies {
+    implementation 'org.jetbrains:annotations:15.0'
     compileOnly 'com.symbol:emdk:+'
+    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.4.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
