--- a/BarcodeSample1/app/build.gradle
+++ b/BarcodeSample1/app/build.gradle
@@ -17,7 +17,12 @@ android {
 }
 dependencies {
     implementation 'org.jetbrains:annotations:15.0'
-    compileOnly 'com.symbol:emdk:+'
+    compileOnly 'com.symbol:emdk:11.0.134'
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.4.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+}
+repositories {
+    maven {
+        url = "https://zebratech.jfrog.io/artifactory/EMDK-Android/"
+    }
 }
